# fairness-auditbench

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 01_train_models_step_by_step.ipynb  02_dp_synth_and_audit.ipynb  03_dpctgan_synthesis.ipynb  04_ctgan_non_dp_synth_and_audit.ipynb
scripts/: audit_fairness.py  clear_cache.sh  run_dp_audit_pipeline.py  synthesize_audit_table.py  train_model.py
scripts/local_scripts/: cluster_install_gpu.sh
src/fairness_auditbench/: __init__.py  __main__.py  cli.py  config.py
src/fairness_auditbench/datasets/: __init__.py  base.py  folktables_acs.py
src/fairness_auditbench/metrics/: __init__.py  fairness.py
src/fairness_auditbench/models/: __init__.py  base.py  ft_transformer.py  logreg.py
src/fairness_auditbench/preprocess/: tabular_sklearn.py  tabular_torch.py
src/fairness_auditbench/runners/: __init__.py  audit.py  synthesize.py  train.py
src/fairness_auditbench/synthesizers/: __init__.py  base.py  ctgan.py  dp_1way.py  dpctgan.py  private_pgm.py  registry.py
src/fairness_auditbench/utils/: device.py  io.py  seed.py
